@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-13T16:19:13Z",
-  "count_outdated" : 450,
-  "uniques_outdated" : 258,
-  "count" : 487,
-  "uniques" : 281,
+  "timestamp" : "2022-08-14T01:26:55Z",
+  "count_outdated" : 453,
+  "uniques_outdated" : 260,
+  "count" : 490,
+  "uniques" : 283,
   "clones" : [
-    {
-      "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 3,
@@ -88,6 +81,13 @@
       "count_minmax": [ 10, 10 ],
       "uniques": 8,
       "uniques_minmax": [ 8, 8 ]
+    },
+    {
+      "timestamp": "2022-08-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
