@@ -3,11 +3,6 @@
   "uniques": 13,
   "clones": [
     {
-      "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 3,
       "uniques": 1
@@ -61,6 +56,11 @@
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 10,
       "uniques": 8
+    },
+    {
+      "timestamp": "2022-08-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
